[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jito-py"
version = "0.1.3"
description = "A Python library for interacting with the Jito JSON-RPC"
readme = "README.md"
authors = [
    { name = "Matrix.Ye", email = "initsysctrl@outlook.com" }
]
license = { text = "MIT" }
requires-python = ">=3.6"
dependencies = [
    "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["jito", "solana", "json-rpc"]

[project.urls]
Homepage = "https://github.com/MatrixYe/jito-py"
